welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:48: error: not found: value Clor
  setCouleurBrosse(Clor.green)
                   ^